--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -35,7 +35,7 @@ body {
 
 ol, ul {
 	list-style: none;
-}
+}`
 
 blockquote, q {
 	quotes: none;
@@ -2173,7 +2173,7 @@ input, select, textarea {
 /* Banner */
 
 	#banner {
-		background: #CCE8F4 url("../../images/pic01.jpg");
+		background: #CCE8F4 url("../../images/maskweaers.jpeg");
 		background-position: center center;
 		background-size: auto 100%;
 		background-repeat: no-repeat;
