--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2173,7 +2173,7 @@ input, select, textarea {
 /* Banner */
 
 	#banner {
-		background: #CCE8F4 url("../../images/maskweaers.jpeg");
+		background: #494299 url("../../images/maskweaers.jpeg");
 		background-position: center center;
 		background-size: auto 100%;
 		background-repeat: no-repeat;
@@ -2198,7 +2198,7 @@ input, select, textarea {
 			}
 
 			#banner header p {
-				color: #d52349;
+				color: ##2d1ee3;
 				padding: 0;
 				font-style: normal;
 				margin: 0;
