--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2184,7 +2184,7 @@ input, select, textarea {
 	}
 
 		#banner header {
-			background-color: rgba(34, 30, 31, 0.98);
+			background-color: #200261;
 			display: inline-block;
 			padding: 2.5em 5em;
 			border-radius: 5px;
@@ -2198,7 +2198,7 @@ input, select, textarea {
 			}
 
 			#banner header p {
-				color: ##2d1ee3;
+				color: #fff;
 				padding: 0;
 				font-style: normal;
 				margin: 0;
