--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2121,7 +2121,7 @@ input, select, textarea {
 				}
 
 				#nav > ul > li.current > a {
-					background: #d52349;
+					background: #2352d5;
 					color: #fff !important;
 					font-weight: 700;
 				}
