--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1575,7 +1575,7 @@ input, select, textarea {
 	.box {
 		background: #ffffff;
 		border-bottom: solid 1px #ccc;
-		padding: 2.75em 10em 2.75em 1.75em;
+		padding: 2.75em .25em 2.75em 1.75em;
 	}
 
 		.box .image.featured {
