--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1575,7 +1575,8 @@ input, select, textarea {
 	.box {
 		background: #ffffff;
 		border-bottom: solid 1px #ccc;
-		padding: 2.75em -1.25em 2.75em 1.75em;
+		padding: 2.75em 1.75em 2.75em 1.75em;
+		margin: -4.5em 1.25em 4.25em -3.5em;
 	}
 
 		.box .image.featured {
@@ -1583,7 +1584,7 @@ input, select, textarea {
 			width: auto;
 			left: 1.75em;
 			top: 1.75em;
-			margin: -4.5em 0 4.25em -3.5em;
+			margin: -4.5em 1.25em 4.25em -3.5em;
 		}
 
 		.box.post header {
