--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1611,6 +1611,7 @@ input, select, textarea {
 		background: #ffffff;
 		border-bottom: solid 1px #ccc;
 		padding: 2.75em 3.75em 2.75em 1.75em;
+		margin: -4.5em 1.5em 4.25em -3.5em;
 	}
 
 		.box .image.featured {
@@ -1618,7 +1619,7 @@ input, select, textarea {
 			width: auto;
 			left: 1.75em;
 			top: 1.75em;
-			margin: -4.5em 0 4.25em -3.5em;
+			margin: -4.5em 1.5em 4.25em -3.5em;
 		}
 
 		.box.post header {
