--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1611,7 +1611,7 @@ input, select, textarea {
 		background: #ffffff;
 		border-bottom: solid 1px #ccc;
 		padding: 2.75em 3.75em 2.75em 1.75em;
-		margin: -4.5em 1.5em 4.25em -3.5em;
+		margin-right: 3.75em;
 	}
 
 		.box .image.featured {
