--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1611,8 +1611,8 @@ input, select, textarea {
 		background: #ffffff;
 		border-bottom: solid 1px #ccc;
 		padding: 2.75em 1.75em 2.75em 1.75em;
-		margin-right: 500px;
-	}
+		width: 250px;
+	     }
 
 		.box .image.featured {
 			position: relative;
