--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1611,7 +1611,7 @@ input, select, textarea {
 		background: #ffffff;
 		border-bottom: solid 1px #ccc;
 		padding: 2.75em 1.75em 2.75em 1.75em;
-		width: 600px;
+		width: 50%;
 	     }
 
 		.box .image.featured {
